--- a/verifying  wallet Ethereum address/package.json
+++ b/verifying  wallet Ethereum address/package.json
@@ -5,13 +5,19 @@
   "dependencies": {
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
-    "styled-components": "^3.3.3"
+    "redux-actions": "^2.4.0",
+    "styled-components": "^3.3.3",
+    "web3": "^1.0.0-beta.34"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "redux": "^4.0.0"
   }
 }
