--- a/verifying  wallet Ethereum address/package.json
+++ b/verifying  wallet Ethereum address/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "crypto-js": "^3.1.9-1",
     "react": "^16.4.1",
+    "react-alert": "^4.0.4",
+    "react-alert-template-basic": "^1.0.0",
     "react-dom": "^16.4.1",
     "react-popup": "^0.9.3",
     "react-redux": "^5.0.7",
+    "react-s-alert": "^1.4.1",
     "react-scripts": "1.1.4",
+    "react-transition-group": "^1.2.1",
     "redux-actions": "^2.4.0",
     "styled-components": "^3.3.3",
     "web3": "^1.0.0-beta.34"
