--- a/verifying  wallet Ethereum address/package.json
+++ b/verifying  wallet Ethereum address/package.json
@@ -9,6 +9,7 @@
     "react-redux": "^5.0.7",
     "react-s-alert": "^1.4.1",
     "react-scripts": "1.1.4",
+    "redux": "^4.0.0",
     "react-transition-group": "^1.2.1",
     "redux-actions": "^2.4.0",
     "styled-components": "^3.3.3",
@@ -21,6 +22,6 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "redux": "^4.0.0"
+
   }
 }
